--- a/TTGO_example/platformio.ini
+++ b/TTGO_example/platformio.ini
@@ -9,7 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@1.7.0
 board = esp32dev
 framework = arduino
 
+monitor_speed = 115200
+upload_speed = 921600
+
+
+lib_deps =
+    https://github.com/lewisxhe/TFT_eSPI.git
+    https://github.com/lewisxhe/Button2.git
