--- a/TTGO_example/platformio.ini
+++ b/TTGO_example/platformio.ini
@@ -16,7 +16,33 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 
+build_flags =
+  -Os
+  -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+  -DUSER_SETUP_LOADED=1
+  -DST7789_DRIVER=1
+  -DTFT_WIDTH=135
+  -DTFT_HEIGHT=240
+  -DCGRAM_OFFSET=1
+  -DTFT_MISO=-1
+  -DTFT_MOSI=19
+  -DTFT_SCLK=18
+  -DTFT_CS=5
+  -DTFT_DC=16
+  -DTFT_RST=23
+  -DTFT_BL=4
+  -DTFT_BACKLIGHT_ON=1
+  -DLOAD_GLCD=1
+  -DLOAD_FONT2=1
+  -DLOAD_FONT4=1
+  -DLOAD_FONT6=1
+  -DLOAD_FONT7=1
+  -DLOAD_FONT8=1
+  -DLOAD_GFXFF=1
+  -DSMOOTH_FONT=1
+  -DSPI_FREQUENCY=40000000
+  -DSPI_READ_FREQUENCY=6000000
 
 lib_deps =
-    https://github.com/lewisxhe/TFT_eSPI.git
-    https://github.com/lewisxhe/Button2.git
+    TFT_eSPI@1.4.21    
+    Button2@1.0.0
