--- a/TTGO_example/platformio.ini
+++ b/TTGO_example/platformio.ini
@@ -44,5 +44,5 @@ build_flags =
   -DSPI_READ_FREQUENCY=6000000
 
 lib_deps =
-    TFT_eSPI@1.4.21    
+    bodmer/TFT_eSPI@^2.3.67   
     Button2@1.0.0
